dynamodel_tests/tests/fails/struct_newtype.rs
use dynamodel::Dynamodel;

#[derive(Dynamodel)]
struct NewType(String);

fn main() {}
