dynamodel_tests/tests/fails/struct_newtype.stderr
error: Unsupported shape `one unnamed field`. Expected named fields.
 --> tests/fails/struct_newtype.rs:3:10
  |
3 | #[derive(Dynamodel)]
  |          ^^^^^^^^^
  |
  = note: this error originates in the derive macro `Dynamodel` (in Nightly builds, run with -Z macro-backtrace for more info)
